--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -16,14 +16,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "Qtum"
-            VALUE "FileDescription",    "qtum-tx (CLI Qtum transaction editor utility)"
+            VALUE "CompanyName",        "Qbe"
+            VALUE "FileDescription",    "qbe-tx (CLI Qbe transaction editor utility)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "qtum-tx"
+            VALUE "InternalName",       "qbe-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "qtum-tx.exe"
-            VALUE "ProductName",        "qtum-tx"
+            VALUE "OriginalFilename",   "qbe-tx.exe"
+            VALUE "ProductName",        "qbe-tx"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
